# Module-Image

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
doc/: doxyfile  image.doxy
src/: Image.cpp  Image.h  ImageViewer.cpp  ImageViewer.h  Pixel.cpp  Pixel.h  main.cpp  mainAffichage.cpp  mainExemple.cpp  mainTest.cpp
